--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <heder>
+    <header>
         <div class="container">
             <img src="images/doughp-logo.webp" alt="Doughp Logo">
             <nav>
@@ -19,15 +18,15 @@
                 </ul>
             </nav>
         </div>
-    </heder>
+    </header>
 
     <main>
 <!--Images after the header-->
         <section class="product-images">
-            <img src="images/product-shot-1.webp">
-            <img src="images/product-shot-2.webp">
-            <img src="images/product-shot-3.webp">
-            <img src="images/product-shot-4.webp">
+                <img src="images/product-shot-1.webp" alt="Cookie Dough Drops">
+                <img src="images/product-shot-2.webp" alt="Cookie Dough Drops image">
+                <img src="images/product-shot-3.webp" alt="Ride or Die">
+                <img src="images/product-shot-4.webp" alt="Legit Cookie Dough">
         </section>
 <!--Swwetheart affairs section-->
         <section class="sweethearts-affair">
