--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <p>$55.00</p>
                         <p>Introducing our delectable trio of cookie dough flavors guaranteed to tantalize your taste buds like never before! Unveiling the ultimate indulgence in every bite, our cookie dough pack offers a divine selection of three mouthwatering flavors.</p>
                         <p>Whether you're craving a classic favorite or eager to embark on a culinary journey, this trio has something for everyone. So go ahead, treat yourself to the ultimate cookie dough experience and discover pure bliss in every spoonful!</p>
-                        <p>Add to cart</p>
+                        <p class="button">Add to cart</p>
             </div>
         </section>
 <!--Behind the douhg area-->
