--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!--What people are saying-->
         <section class="testimonials">
             <div class="container">
-                <h2>What people are saying</h2>
+                <h2 class="what-people-are-saying">What people are saying</h2>
                     <div class="testimonial">
                         <p>"It’s just so Doughp! I didn’t know what to expect, but I am so addicted now. Every flavor was delicious and I honestly can’t wait to try even more!"</p>
                             <p class="author">Andrew J.</p>
