--- a/index.html
+++ b/index.html
@@ -52,46 +52,55 @@
         <section class="testimonials">
             <div class="container">
                 <h2 class="what-people-are-saying">What people are saying</h2>
-                    <div class="testimonial">
+                    <div class="testimonial-1">
                         <p>"It’s just so Doughp! I didn’t know what to expect, but I am so addicted now. Every flavor was delicious and I honestly can’t wait to try even more!"</p>
                             <p class="author">Andrew J.</p>
                     </div>
-                    <div class="testimonial">
+                    <div class="testimonial-2">
                         <p>"Great product. Absolutely loved Doughp. Tasted great, came quickly and I love a good cause. Was happy I chose the four pack so that I could try a few flavors."</p>
                         <p class="author">Emely W.</p>
                     </div>
-                    <div class="testimonial">
+                    <div class="testimonial-3">
                         <p>"Life changing! This is something you absolutely need to indulge in. Our entire family is obsessed."</p>
                         <p class="author">Ana S.</p>
                     </div>
             </div>
         </section>
 <!--Try it with-->
-        <section class="try-it-with">
-            <div class="container">
-                <h2>Try it with...</h2>
-            <div class="product">
+<section class="try-it-with">
+    <div class="container">
+        <h2>Try it with...</h2>
+        <div class="product-1-container">
+            <div class="product-1">
                 <img src="images/ride-or-die.webp" alt="Ride or Die">
                 <p>Ride or Die</p>
                 <p class="price">$17.00</p>
             </div>
-            <div class="product">
+        </div>
+        <div class="product-2-container">
+            <div class="product-2">
                 <img src="images/brownie-beast.webp" alt="Brownie Beast">
                 <p>Brownie Beast</p>
                 <p class="price">$17.00</p>
             </div>
-            <div class="product">
+        </div>
+        <div class="product-3-container">
+            <div class="product-3">
                 <img src="images/cookie-monsta.webp" alt="Cookie Monsta">
                 <p>Cookie Monsta</p>
                 <p class="price">$17.00</p>
             </div>
-            <div class="product">
+        </div>
+        <div class="product-4-container">
+            <div class="product-4">
                 <img src="images/smores.webp" alt="Want S'more?">
                 <p>Want S'more?</p>
                 <p class="price">$17.00</p>
             </div>
-             </div>
-        </section>
+        </div>
+    </div>
+</section>
+
     </main>
     <footer>
         <div class="container">
