--- a/index.html
+++ b/index.html
@@ -42,29 +42,25 @@
         </section>
 <!--Behind the douhg area-->
         <section class="behind-the-dough">
+            <h2>Behind the Dough</h2>
             <div class="container">
-                <h2>Behind the Dough</h2>
                     <p>Here's the scoop from Doughp's founder on how this flavor came to be: "I first made Red Velvet on a total whim, just a few months into business in 2017. One day, while mixing up Doughp at our original commercial kitchen in Oakland, I left to grab some lunch at a nearby bakery.</p>
                     <p>I saw an absolutely delicious-looking red velvet cake in their dessert case and immediately thought: I NEED to know what this tastes like in cookie dough! I bought the cake and mixed it right into a small 5lb batch of Doughp; cream cheese frosting, cake and all! HEAVEN by the spoonful!"</p>
             </div>
         </section>
 <!--What people are saying-->
+        <section class="what-people-are-saying">
+    <h2 class="what-people-are-saying">What people are saying</h2>
         <section class="testimonials">
             <div class="container">
-                <h2 class="what-people-are-saying">What people are saying</h2>
-                    <div class="testimonial-1">
                         <p>"It’s just so Doughp! I didn’t know what to expect, but I am so addicted now. Every flavor was delicious and I honestly can’t wait to try even more!"</p>
                             <p class="author">Andrew J.</p>
-                    </div>
-                    <div class="testimonial-2">
                         <p>"Great product. Absolutely loved Doughp. Tasted great, came quickly and I love a good cause. Was happy I chose the four pack so that I could try a few flavors."</p>
                         <p class="author">Emely W.</p>
-                    </div>
-                    <div class="testimonial-3">
                         <p>"Life changing! This is something you absolutely need to indulge in. Our entire family is obsessed."</p>
                         <p class="author">Ana S.</p>
-                    </div>
             </div>
+        </section>
         </section>
 <!--Try it with-->
 <section class="try-it-with">
