what people are saying edits

--- a/index.html
+++ b/index.html
@@ -49,19 +49,26 @@
             </div>
         </section>
 <!--What people are saying-->
-        <section class="what-people-are-saying">
-    <h2 class="what-people-are-saying">What people are saying</h2>
-        <section class="testimonials">
-            <div class="container">
-                        <p>"It’s just so Doughp! I didn’t know what to expect, but I am so addicted now. Every flavor was delicious and I honestly can’t wait to try even more!"</p>
-                            <p class="author">Andrew J.</p>
-                        <p>"Great product. Absolutely loved Doughp. Tasted great, came quickly and I love a good cause. Was happy I chose the four pack so that I could try a few flavors."</p>
-                        <p class="author">Emely W.</p>
-                        <p>"Life changing! This is something you absolutely need to indulge in. Our entire family is obsessed."</p>
-                        <p class="author">Ana S.</p>
+<section class="what-people-are-saying">
+    <h2>What people are saying</h2>
+    <section class="testimonials">
+        <div class="container">
+            <div class="testimonial">
+                <p>"It’s just so Doughp! I didn’t know what to expect, but I am so addicted now. Every flavor was delicious and I honestly can’t wait to try even more!"</p>
+                <p class="author">Andrew J.</p>
             </div>
-        </section>
-        </section>
+            <div class="testimonial">
+                <p>"Great product. Absolutely loved Doughp. Tasted great, came quickly and I love a good cause. Was happy I chose the four pack so that I could try a few flavors."</p>
+                <p class="author">Emely W.</p>
+            </div>
+            <div class="testimonial">
+                <p>"Life changing! This is something you absolutely need to indulge in. Our entire family is obsessed."</p>
+                <p class="author">Ana S.</p>
+            </div>
+        </div>
+    </section>
+</section>
+
 <!--Try it with-->
 <section class="try-it-with">
     <h1>Try it with...</h1>
